fix header spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -67,6 +67,12 @@ img {
   width: 100%;
 }
 
+.full-width-div {
+  margin: 0 -9999rem;
+  /* add back negative margin value */
+  padding: 0.25rem 9999rem;
+}
+
 /* Header */
 
 .header {
@@ -108,12 +114,14 @@ img {
 
 /* Feature */
 
+
 .feature {
   min-height: 400px;
   background-image: url('../images/wairua-retreats-inspiration.jpg');
   background-position: center;
   background-size: 0.9%;
   margin-top: -3em;
+  margin-bottom: 2em;
 }
 
 .feature p {
@@ -126,16 +134,13 @@ img {
 .feature h2 {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 6em;
+  font-weight: 700;
   padding-top: 80px;
   color: #fff;
   text-shadow: 2px 2px 4px #4a4a4a;
 }
 
-.full-width-div {
-  margin: 0 -9999rem;
-  /* add back negative margin value */
-  padding: 0.25rem 9999rem;
-}
+
 
 /* Workshops */
 
